# vcmp_browser

./: .gitignore  Cargo.toml  index.html  package.json  vite.config.ts
crates/application/: Cargo.toml  tauri.conf.json
crates/application/src/: lib.rs  main.rs  tauri_command.rs
crates/vcmp_browser_core/: Cargo.toml
crates/vcmp_browser_core/src/: config.rs  encodes.rs  error.rs  game_launcher.rs  handshake.rs  internet.rs  lib.rs  net.rs  resources.rs  types.rs  util.rs  utils.rs
crates/vcmp_browser_core/src/config/: game.rs  index_url.rs  profile.rs
src/: App.vue  main.ts
src/components/: ServerList.vue  serverinfo.vue
src/pages/: Home.vue  Internet.vue
