[package]
name = "vcmp_browser_core"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-bytes = "0.3.5"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.20", features = ["json", "blocking", "multipart"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sevenz-rust = "0.6.1"
tempfile = "3.20.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
